--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -5,6 +5,7 @@
     =h(item.body)
   -form_for [@list, item], :html => {:style => "display:none"} do |form|
     =form.text_field :body, :class => "item_body"
+    =image_tag("loader_fff_on_ddd.gif", :class => "loader")
   
   .delete_wrapper
     =link_to 'x', list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button', :title => "delete"
